src/objects/CS_Software_Delivery__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>**** Service Cloud Software Delivery Attributes , template ids ********</description>
    <fields>
        <fullName>CS_BFO_Template__c</fullName>
        <label>BFO Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Conga_Email_Template_Id__c</fullName>
        <defaultValue>&apos;a5s2900000007r1&apos;</defaultValue>
        <inlineHelpText>Conga Email Template id</inlineHelpText>
        <label>Conga Email Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Conga_Key_Attachment_Template_Id__c</fullName>
        <defaultValue>&apos;a5u2900000002K6&apos;</defaultValue>
        <inlineHelpText>Conga Key Attachment Template Id</inlineHelpText>
        <label>Conga Key Attachment Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_From_Email_id__c</fullName>
        <defaultValue>&apos;0D22900000000aM&apos;</defaultValue>
        <inlineHelpText>Software Delivery From Email id</inlineHelpText>
        <label>SW Delivery From Email id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_General_Software_Delivery_Template__c</fullName>
        <defaultValue>&apos;a5u2900000003xZ&apos;</defaultValue>
        <label>General Software Delivery Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Live_Request_Email__c</fullName>
        <defaultValue>&apos;live-request@guidewire.com.gforcedev&apos;</defaultValue>
        <inlineHelpText>Live Request Email Id</inlineHelpText>
        <label>Live Request Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Rating_Management_Template__c</fullName>
        <label>Rating Management Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Re_Insurance_Template__c</fullName>
        <label>Re Insurance Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Related_Query_Id__c</fullName>
        <defaultValue>&apos;a5t290000000CzG&apos;</defaultValue>
        <inlineHelpText>Conga related Query id</inlineHelpText>
        <label>Related Query Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SAP_Production_Template__c</fullName>
        <label>SAP Production Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SaaSAttachmentTemplate__c</fullName>
        <description>*** Conga SaaS Attachment Template****</description>
        <label>SaaSAttachmentTemplate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SaaS_Conga_Template__c</fullName>
        <label>SaaS Conga Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Software_Delivery_Email__c</fullName>
        <defaultValue>&apos;softwaredelivery@guidewire.com.gforcedev&apos;</defaultValue>
        <inlineHelpText>Software Delivery Email</inlineHelpText>
        <label>Software Delivery Email</label>
        <type>Email</type>
    </fields>
    <label>GW Software Delivery</label>
</CustomObject>